--- a/resume.html
+++ b/resume.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Angela DeBerry Profile</title>
+    <title>Angela DeBerry Resume</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="resume.css">
 
 </head>
 
@@ -24,13 +24,13 @@
                 <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                   <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="resume.html">Resume <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="#">Resume <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">About</a>
+                      <a class="nav-link" href="#">Resume</a>
 
                     </li>
                    
@@ -39,7 +39,38 @@
                 </div>
               </nav>
 <div class="container fluid">
-  <h1>Angela DeBerry</h1>
+  <div class="Skills">
+    <h1>Skill Set</h1>
+    <p>HTML,CSS,JavaScript</p>
+    <p>Bootstrap,React</p>
+    <p>Some familiarity with Python</p>
+
+  </div>
+  <div class="work-history">
+  <h1>Work History</h1>
+  <div class = "Exel">
+    
+  <h2>Exel Transportation/2002-2005</h2>
+  <h3>Accounting Manager</h3>
+  <p>Manage payment of 200 to 300 invoices a week</p>
+  <p>Supervise Two Payables Clerks</p>
+  <p>Prepare monthly financial statements including Balance Sheet and Income statement,analyze statements.</p>
+  
+ <p>Prepare Journal Entries for Month end and closing procedure</p>
+  
+ <p> Close Subledgers</p>
+ <p> Prepare 1099's, 1096 Federal returns</p>
+   </div>
+   <div class = "Yardley">
+     <h2>Yardley of London/1998-2002</h2>
+     <h3>Senior Accountant</h3>
+     <p>Prepare monthly financial statements including Balance Sheet and Income statement,analyze statements.</p>
+     <p>Close Subledgers</p>
+     <p>Prepare proforma promotional Profit and Loss statements</p>
+     <p>Prepare annuual Sales and Use Tax Return</p>
+     <p>Prepare Business Tax Return</p>
+   </div>
+  </div>
 
 </div>
 
@@ -55,4 +86,3 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
-
