--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                 </div>
               </nav>
 <div class="container fluid">
+  <div="DeBerry-Brand>
   <h1>Angela DeBerry</h1>
+  <h1>Web Developer</h1>
+  </div>
 
 </div>
 
