added lines to index

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 </div>
               </nav>
 <div class="container fluid">
-  <div="DeBerry-Brand>
+  <div class ="align-middle">
+  <h1>Angela DeBerry</h1>
   <h1>Angela DeBerry</h1>
   <h1>Web Developer</h1>
   </div>
