--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Angela DeBerry Profile</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-
+    <script src="https://kit.fontawesome.com/b6cb8bb3b5.js" crossorigin="anonymous"></script>
 </head>
 
 
@@ -16,7 +16,7 @@
 
 <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-                <a class="navbar-brand" href="#">Angela DeBerry</a>
+                <a class="navbar-brand" href="#"><i class="fas fa-air-freshener"></i>Angela DeBerry</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
